--- a/Ejercicio-4-Blanca-Cano.ipynb
+++ b/Ejercicio-4-Blanca-Cano.ipynb
@@ -20,23 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n = 75577399\n",
-    "is_prime(n)"
+    "n = 75577399"
    ]
   },
   {
@@ -44,12 +32,16 @@
    "metadata": {},
    "source": [
     "### Apartado i\n",
-    "Factoriza $n-1$ aplicando el método $\\rho$ de Polard ¿Cuántas iteraciones necesitas?"
+    "Factoriza $n-1$ aplicando el método $\\rho$ de Polard ¿Cuántas iteraciones necesitas?\n",
+    "\n",
+    "#### Solución\n",
+    "\n",
+    "Aunque sabemos que el 2 es un factor y podríamos ahorrarnos la iteración vamos a correr el algoritmo como si fuera desconocido. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -264,19 +256,6 @@
     }
    ],
    "source": [
-    "def Rho_de_Polard(n :Integer, f) -> Integer:\n",
-    "    '''Devuelve un factor de p\n",
-    "    o n si es un fracaso\n",
-    "    '''\n",
-    "    x = 1\n",
-    "    y = 1\n",
-    "    d = 1\n",
-    "    while d == 1:\n",
-    "        x = f(x)\n",
-    "        y = f(f(y))\n",
-    "        d = gcd(abs(x-y),n)\n",
-    "    return d\n",
-    "\n",
     "def Verbose_Rho_de_Polard(n:Integer, f) -> Integer:\n",
     "    '''Devuelve un factor de p\n",
     "    o n si es un fracaso\n",
@@ -326,7 +305,9 @@
     "\n",
     "Vamos a comprobar que son factores primos con el Test de Lucas-Lehmer.\n",
     "\n",
-    "Que recordamos que era si cumple que: \n",
+    "Que recordamos que era si cumple que:\n",
+    "\n",
+    "\n",
     "Existe un entero $a$ tal que: \n",
     "1. $a^{n-1} \\equiv 1 \\mod n$\n",
     "2. $a^{(n-1)/q} \\not \\equiv 1 \\mod n$ para $q$ divisor de $n-1.$\n",
@@ -336,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -389,36 +370,24 @@
    "source": [
     "### Apartado tercero\n",
     "Aplica Lucas-Lehmer para encontrar un certificado de primalidad de $n$. \n",
-    "Vamos a encontrar un testigo de primalidad. \n"
+    "\n",
+    "\n",
+    "Vamos a encontrar primero un testigo de primalidad. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No se ha encontrado un entero que satisfaga el test de Lucas-Lehmer para p = 75577399\n"
+      "15 es un testigo de la primalidad de n=75577399\n"
      ]
     }
    ],
-   "source": [
-    "resultado = Test_Lucas_Lehmer(n,[2699])\n",
-    "mensaje = (\n",
-    "    f\"p={n} es primo por el test Lucas-Lehmer con a = {resultado}\",\n",
-    "    f\"No se ha encontrado un entero que satisfaga el test de Lucas-Lehmer para p = {n}\"\n",
-    ")[resultado == 0] \n",
-    "print(mensaje)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def BuscaTestigo(n, factores, lista):\n",
     "    m = n-1\n",
@@ -439,14 +408,17 @@
     "    f\"No se ha encontrado un testigo que demuestre la primalidad de n= {n}\"\n",
     ")[testigo == 0] \n",
     "print(mensaje)\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Acabamos de encontrar que $15$ satisface las hipótesis del test de Lucas-Lehmer, luego podemos afirmar que es un número primo. \n",
     "\n",
-    "\n",
-    "resultado = Test_Lucas_Lehmer(n,[testigo])\n",
-    "mensaje = (\n",
-    "    f\"p={n} es primo por el test Lucas-Lehmer con a = {resultado}\",\n",
-    "    f\"No se ha encontrado un entero que satisfaga el test de Lucas-Lehmer para p = {n}\"\n",
-    ")[resultado == 0] \n",
-    "print(mensaje)  \n"
+    "Su correspondiente certificado de primalidad es: \n",
+    "$$\\{ 75577399, 15, \\{2,3, 13, 359, 2699\\} \\}$$"
    ]
   }
  ],
@@ -463,12 +435,11 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "sage",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
