--- a/Ejercicio-5-Blanca-Cano.ipynb
+++ b/Ejercicio-5-Blanca-Cano.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "7393 * 7559"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -146,41 +146,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i:1  a_i:8  a^2 +n: 79 = 4 * 16 + 15\n",
-      "i:2  a_i:4  a^2 +n: 31 = 3 * 8 + 7\n",
-      "i:3  a_i:3  a^2 +n: 24 = 4 * 6 + 0\n",
+      "i:1  a_i:3780  a^2 +n: 14295959 = 1890 * 7560 + 7559\n",
+      "i:2  a_i:1890  a^2 +n: 3579659 = 946 * 3780 + 3779\n",
+      "i:3  a_i:946  a^2 +n: 902475 = 476 * 1892 + 1883\n",
+      "i:4  a_i:476  a^2 +n: 234135 = 245 * 952 + 895\n",
+      "i:5  a_i:245  a^2 +n: 67584 = 137 * 490 + 454\n",
+      "i:6  a_i:137  a^2 +n: 26328 = 96 * 274 + 24\n",
+      "i:7  a_i:96  a^2 +n: 16775 = 87 * 192 + 71\n",
+      "i:8  a_i:87  a^2 +n: 15128 = 86 * 174 + 164\n",
+      "i:9  a_i:86  a^2 +n: 14955 = 86 * 172 + 163\n",
       "\n",
-      " La parte entera de  sqr(15) es3 \n",
+      " La parte entera de  sqr(7559) es 86 \n",
       " ================================================== \n",
       "\n",
-      "i:1  a_i:51  a^2 +n: 2702 = 26 * 102 + 50\n",
-      "i:2  a_i:26  a^2 +n: 777 = 14 * 52 + 49\n",
-      "i:3  a_i:14  a^2 +n: 297 = 10 * 28 + 17\n",
-      "i:4  a_i:10  a^2 +n: 201 = 10 * 20 + 1\n",
+      "86.94250974063263\n",
+      "i:1  a_i:3697  a^2 +n: 13675202 = 1849 * 7394 + 3696\n",
+      "i:2  a_i:1849  a^2 +n: 3426194 = 926 * 3698 + 1846\n",
+      "i:3  a_i:926  a^2 +n: 864869 = 466 * 1852 + 1837\n",
+      "i:4  a_i:466  a^2 +n: 224549 = 240 * 932 + 869\n",
+      "i:5  a_i:240  a^2 +n: 64993 = 135 * 480 + 193\n",
+      "i:6  a_i:135  a^2 +n: 25618 = 94 * 270 + 238\n",
+      "i:7  a_i:94  a^2 +n: 16229 = 86 * 188 + 61\n",
+      "i:8  a_i:86  a^2 +n: 14789 = 85 * 172 + 169\n",
+      "i:9  a_i:85  a^2 +n: 14618 = 85 * 170 + 168\n",
       "\n",
-      " La parte entera de  sqr(101) es10 \n",
+      " La parte entera de  sqr(7393) es 85 \n",
       " ================================================== \n",
-      "\n"
+      "\n",
+      "85.98255637046388\n"
      ]
     }
    ],
    "source": [
-    "def VerboseRaizCuadradoEntero(n):\n",
+    "def VerboseParteEnteraRaizCuadrada(n):\n",
     "    # Incicializamos a \n",
     "    a = n\n",
     "    if is_even(n):\n",
     "        a //= 2\n",
     "    else:\n",
     "        a = (a+1)//2\n",
-    "\n",
-    "    \n",
     "    menor = True \n",
     "    i = 1\n",
     "    while menor:\n",
@@ -193,13 +204,98 @@
     "            a = cociente\n",
     "        else:\n",
     "            menor = False \n",
-    "    print( \"\\n\",f\"La parte entera de  sqr({n}) es{a}\", '\\n','='*50,'\\n')   \n",
+    "    print( \"\\n\",f\"La parte entera de  sqr({n}) es {a}\", '\\n','='*50,'\\n')   \n",
     "    return a \n",
-    "for p in [15,101]:#factores:\n",
-    "    VerboseRaizCuadradoEntero(p)\n",
     "\n",
+    "for p in factores:\n",
+    "    VerboseParteEnteraRaizCuadrada(p)\n",
+    "\n",
+    "\n",
+    "def ParteEnteraRaizCuadrada(n):\n",
+    "    # Incicializamos a \n",
+    "    a = n\n",
+    "    if is_even(n):\n",
+    "        a //= 2\n",
+    "    else:\n",
+    "        a = (a+1)//2\n",
+    "    menor = True \n",
+    "    i = 1\n",
+    "    while menor:\n",
+    "        numerador = a**2 + n\n",
+    "        cociente =  numerador//(2*a)\n",
+    "        resto = numerador % (2*a)\n",
+    "        i += 1\n",
+    "        if cociente < a:\n",
+    "            a = cociente\n",
+    "        else:\n",
+    "            menor = False \n",
+    "    return a \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apartado tercero \n",
+    "Calcula la FCS de $\\sqrt{p_1}$ y $\\sqrt{p_2}$ con el algoritmo entero."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los 200 primeros componentes de  FCS de 7559 son [86, 1, 16, 2, 1, 1, 6, 2, 1, 3, 1, 8, 2, 1, 2, 1, 3, 1, 33, 1, 85, 1, 33, 1, 3, 1, 2, 1, 2, 8, 1, 3, 1, 2, 6, 1, 1, 2, 16, 1, 172, 1, 16, 2, 1, 1, 6, 2, 1, 3, 1, 8, 2, 1, 2, 1, 3, 1, 33, 1, 85, 1, 33, 1, 3, 1, 2, 1, 2, 8, 1, 3, 1, 2, 6, 1, 1, 2, 16, 1, 172, 1, 16, 2, 1, 1, 6, 2, 1, 3, 1, 8, 2, 1, 2, 1, 3, 1, 33, 1, 85, 1, 33, 1, 3, 1, 2, 1, 2, 8, 1, 3, 1, 2, 6, 1, 1, 2, 16, 1, 172, 1, 16, 2, 1, 1, 6, 2, 1, 3, 1, 8, 2, 1, 2, 1, 3, 1, 33, 1, 85, 1, 33, 1, 3, 1, 2, 1, 2, 8, 1, 3, 1, 2, 6, 1, 1, 2, 16, 1, 172, 1, 16, 2, 1, 1, 6, 2, 1, 3, 1, 8, 2, 1, 2, 1, 3, 1, 33, 1, 85, 1, 33, 1, 3, 1, 2, 1, 2, 8, 1, 3, 1, 2, 6, 1, 1, 2, 16, 1]\n",
+      "\n",
+      "Los 200 primeros componentes de  FCS de 7393 son [85, 1, 56, 3, 18, 1, 3, 2, 5, 1, 12, 2, 1, 1, 1, 1, 3, 1, 3, 1, 6, 2, 1, 2, 21, 8, 7, 24, 2, 2, 1, 7, 2, 9, 1, 1, 1, 4, 1, 2, 1, 1, 4, 1, 1, 1, 2, 1, 14, 1, 9, 1, 4, 3, 3, 3, 1, 2, 3, 3, 2, 1, 3, 3, 3, 4, 1, 9, 1, 14, 1, 2, 1, 1, 1, 4, 1, 1, 2, 1, 4, 1, 1, 1, 9, 2, 7, 1, 2, 2, 24, 7, 8, 21, 2, 1, 2, 6, 1, 3, 1, 3, 1, 1, 1, 1, 2, 12, 1, 5, 2, 3, 1, 18, 3, 56, 1, 170, 1, 56, 3, 18, 1, 3, 2, 5, 1, 12, 2, 1, 1, 1, 1, 3, 1, 3, 1, 6, 2, 1, 2, 21, 8, 7, 24, 2, 2, 1, 7, 2, 9, 1, 1, 1, 4, 1, 2, 1, 1, 4, 1, 1, 1, 2, 1, 14, 1, 9, 1, 4, 3, 3, 3, 1, 2, 3, 3, 2, 1, 3, 3, 3, 4, 1, 9, 1, 14, 1, 2, 1, 1, 1, 4, 1, 1, 2, 1, 4, 1, 1]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Algoritmo \n",
+    "\n",
+    "def FraccionContinuaRaiz(p):\n",
+    "    parte_entera_raiz =  ParteEnteraRaizCuadrada(p)\n",
+    "    q_a = parte_entera_raiz\n",
+    "    FCS = [q_a]\n",
+    "    P_a = 0\n",
+    "    Q_a = 1\n",
+    "     \n",
+    "    for i in range(2*p-1):\n",
+    "        P_s = q_a*Q_a -P_a\n",
+    "        Q_s = (p - P_s*P_s)//Q_a\n",
+    "        q_s = (P_s + parte_entera_raiz)//Q_s\n",
+    "        FCS.append(q_s)\n",
+    "        P_a = P_s\n",
+    "        q_a = q_s\n",
+    "        Q_a = Q_s\n",
+    "    return FCS\n",
+    "\n",
+    "numeros_que_mostrar = 200\n",
+    "for p in factores:\n",
+    "    FCS = FraccionContinuaRaiz(p)\n",
+    "    print(f\"Los {numeros_que_mostrar} primeros componentes de la FCS de {p} son {FCS[:numeros_que_mostrar]}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
