--- a/Ejercicio-5-6-Blanca-Cano.ipynb
+++ b/Ejercicio-5-6-Blanca-Cano.ipynb
@@ -431,6 +431,7 @@
     }
    ],
    "source": [
+    "# ¿Cómo se calcula la positiva?\n",
     "x = convergentes_A[-2]\n",
     "y = convergentes_B[-2]\n",
     "\n",
@@ -442,6 +443,114 @@
     "    print(f\"x_{index} = {x*i}\")\n",
     "    print(f\"y_{index} = {y*j}\", \"\\n\")\n",
     "    index += 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apartado tercero\n",
+    "\n",
+    "Calculas las unidades del anillo de enteros cuadráticos $\\mathbb Z[\\sqrt{p}]$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mod(p,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mod(p,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1:  116\n",
+      "La unidad fundamental es UF= 6429437427154582982036676128894489518953550250730161419913561738735929448211687594227826496072*sqrt(7393) + 552819466010689233998515499473365517455357059592352639292664311551088055972323204135997102061057\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Caza cuatro \n",
+    "\n",
+    "def UnidadFundamental(p):\n",
+    "    parte_entera_raiz =  ParteEnteraRaizCuadrada(p)\n",
+    "    q_a = parte_entera_raiz\n",
+    "    FCS = [q_a]\n",
+    "    P_a = 0\n",
+    "    Q_a = 1\n",
+    "    \n",
+    "    salida = None\n",
+    "       \n",
+    "    for i in range(200):\n",
+    "        P_s = q_a*Q_a -P_a\n",
+    "        Q_s = (p - P_s*P_s)//Q_a\n",
+    "        q_s = (P_s + parte_entera_raiz)//Q_s\n",
+    "        FCS.append(q_s)\n",
+    "        if abs(Q_s) == 4:\n",
+    "            print(\"4: \",i)\n",
+    "            salida = i\n",
+    "        elif Q_s == 1 and salida==None:\n",
+    "            print(\"1: \", i)\n",
+    "            salida = i\n",
+    "        P_a = P_s\n",
+    "        q_a = q_s\n",
+    "        Q_a = Q_s\n",
+    "    return i, FCS\n",
+    "\n",
+    "i,FCS = UnidadFundamental(p)\n",
+    "\n",
+    "convergentes2, convergentes2_A, convergentes2_B = Convergentes(FCS)\n",
+    "\n",
+    "x = convergentes2_A[i-1]\n",
+    "y = convergentes2_B[i-1]\n",
+    "\n",
+    "unidad_fundamental = x+y*sqrt(p)\n",
+    "print(\"La unidad fundamental es UF=\", unidad_fundamental)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y por tanto las unidades son de la forma $(\\pm UF)^n$ con $n$ entero"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apartado cuarto \n",
+    "\n",
+    "¿Es $\\mathbb Z[\\sqrt{p}]$ el anillo de enteros del cuerpo $\\mathbb Q[\\sqrt{p}]$?\n",
+    "\n",
+    "(Si tiene que razonar con algo de la página 39)"
    ]
   }
  ],
