--- a/Ejercicio-7-Blanca-Cano.ipynb
+++ b/Ejercicio-7-Blanca-Cano.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -474,10 +474,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funciones para el apartado 3\n",
     "def SucesionLucasModulo(P,Q,r,n):\n",
     "    U_0=0\n",
     "    U_1=1\n",
@@ -488,7 +489,7 @@
     "    U = dict()\n",
     "    V = dict()\n",
     "\n",
-    "    num_binario= n.binary()\n",
+    "    num_binario= bin(r)[2:]#n.binary()\n",
     "    for i in num_binario:\n",
     "        if i=='0':\n",
     "            aux1=(2*U_0*U_1-P*U_0**2)%n\n",
@@ -511,10 +512,23 @@
     "        V[k+1]=(P*U_1- 2*Q*U_0)%n\n",
     "        #print(f\"U_{k} = {U_0}, U_{k+1}={U_1}\")\n",
     "        if k >= r:\n",
-    "            print(f\"Se ha encontrado para k={k}\")\n",
+    "            #print(f\"Se ha encontrado para k={k}\")\n",
     "            break    \n",
     "    \n",
-    "    return U,V"
+    "    return U,V, k\n",
+    "\n",
+    "\n",
+    "def SucesiónLucasContinuda(U_0, U_1, ini, fin, n):\n",
+    "    '''Devuelve una sucesión de Lucas de tamaño n,\n",
+    "    '''\n",
+    "    k = ini\n",
+    "    U=[U_0, U_1]\n",
+    "    \n",
+    "    while k <=fin:\n",
+    "        U.append(recurrencia(U[-1], U[-2]) % n)\n",
+    "        k+= 1\n",
+    "    return U[-1]\n",
+    "     \n"
    ]
   },
   {
@@ -528,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -536,14 +550,18 @@
      "output_type": "stream",
      "text": [
       "Una factorización de r es: 2 * 1254377 * 954775136479 * 13620982235579\n",
-      "r/p = 16313141742523232986545250664557\n",
-      "Se ha encontrado para k=32626283485046465973090501329113\n",
-      "r/p = 26009950345905948509172682\n",
-      "Se ha encontrado para k=31114848599478212330904485\n",
-      "r/p = 34171693667437758566\n",
-      "Se ha encontrado para k=59346863936382698690\n",
-      "r/p = 2395295942742237166\n",
-      "Se ha encontrado para k=3709178996023918668\n"
+      "========================================\n",
+      "r/2 = 16313141742523232986545250664557\n",
+      "k = 16313141742523232986545250664557   U[k]=0,U[k+1]27822599973490115553594899447895\n",
+      "========================================\n",
+      "r/1254377 = 26009950345905948509172682\n",
+      "k = 26009950345905948509172682   U[k]=14545771657684926196540055644674,U[k+1]12787340418860672764910603242815\n",
+      "========================================\n",
+      "r/954775136479 = 34171693667437758566\n",
+      "k = 34171693667437758566   U[k]=27607402118139923100025074387802,U[k+1]28954464928155158237324024464439\n",
+      "========================================\n",
+      "r/13620982235579 = 2395295942742237166\n",
+      "k = 2395295942742237166   U[k]=15855743602968308162231260610954,U[k+1]31374726164882035030552829878759\n"
      ]
     }
    ],
@@ -555,15 +573,28 @@
     "\n",
     "# Calculamos si es cada término de la sucesión \n",
     "for p,_ in factores:\n",
-    "    r_aux = r//p\n",
-    "    print(f\"r/p = {r_aux}\")\n",
-    "    U,V=SucesionLucasModulo(P,Q,r_aux,n)\n",
-    "    \n",
+    "    r_aux = r/p\n",
+    "    print(\"=\"*40)\n",
+    "    print(f\"r/{p} = {r_aux}\")\n",
+    "    U,V, k=SucesionLucasModulo(P,Q,r_aux,n)\n",
+    "    print(f\"k = {k}   U[k]={U[k]},U[k+1]{U[k+1]}\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cálculo del rango y comentario sobre primalidad \n",
+    "\n",
+    "Como podemos ver el rango de Lucas en este caso sería $\\frac{r}{2}$ y esto no nos permite afirmar que nuestro $n$ sea primo, ya que para ello el rango encontrado debería de ser $n+1$"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
   "kernelspec": {
    "display_name": "SageMath 9.5",
    "language": "sage",
