--- a/Ejercicio-7-Blanca-Cano.ipynb
+++ b/Ejercicio-7-Blanca-Cano.ipynb
@@ -489,7 +489,7 @@
     "    U = dict()\n",
     "    V = dict()\n",
     "\n",
-    "    num_binario= bin(r)[2:]#n.binary()\n",
+    "    num_binario= bin(r)[2:]\n",
     "    for i in num_binario:\n",
     "        if i=='0':\n",
     "            aux1=(2*U_0*U_1-P*U_0**2)%n\n",
@@ -498,7 +498,6 @@
     "            U_1=aux2\n",
     "            k *=2\n",
     "            \n",
-    "\n",
     "        if i=='1':\n",
     "            aux1=(U_1**2-Q*U_0**2)%n\n",
     "            aux2=(P*U_1**2-2*Q*U_0*U_1)%n\n",
@@ -607,7 +606,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "sage",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.9"
