--- a/Ejercicio-8-Blanca-Cano.ipynb
+++ b/Ejercicio-8-Blanca-Cano.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "2^2 * 19 * 47128831 * 688429143145855402034758463849"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,9 +424,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 es un testigo de la primalidad de n=2465809416452482897062922270410493919443\n"
+     ]
+    }
+   ],
    "source": [
     "# Código auxiliar prácticas anteriores\n",
     "def BuscaTestigo(n, factores, lista):\n",
@@ -451,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +510,7 @@
     "                                    79427 # ya descompone\n",
     "                                ]\n",
     "for p in factores_que_mostrar:\n",
-    "    factores_aux[p] = factor(p-1)\n",
+    "    factores_aux[p] = factor(p-1) # Suponer Rho de Pollard\n",
     "    print(f\"los factores de {p-1} son {factores_aux[p]}\")\n",
     "    factores_aux[p] = list(map(lambda x:x[0], factores_aux[p]))\n",
     "# vamos a buscar testigos\n",
@@ -524,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +541,7 @@
        "[2, 19, 47128831, 688429143145855402034758463849]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,6 +555,110 @@
    "metadata": {},
    "source": [
     "son primos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apartado tercero  \n",
+    "\n",
+    "Con $P=1$, encuentra el menor $Q$ natural mayor o igual que 2, tal que definan una sucesión de Lucas que certifique la primalidad de $n$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nos basaremos en la caracterización de primalidad: \n",
+    "Si encontramos una sucesión de Lucas, con $P$,$Q$ con $d=P^2 - 4Q$ no cuadrado perfecto y se satisface que $(n, 2Qd) = 1$ y el rango de Lucas $w(n)= n \\pm 1$ entonces n es primo. \n",
+    "Definimos las funciones que vamos a utilizar: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P:  1 Q: 2\n",
+      "U_(n+1)/ 1 = 0\n",
+      "U_(n+1)/ 2 = 1445563546333125415472685040396674986922\n",
+      "U_(n+1)/ 19 = 2337396916435230302473885871946517997327\n",
+      "U_(n+1)/ 47128831 = 1324746672392258078649063563730902924192\n",
+      "U_(n+1)/ 688429143145855402034758463849 = 2195440474544974924555082376726942700047\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sLucas_modificado(P,Q,r,n):\n",
+    "    U_0=0\n",
+    "    U_1=1\n",
+    "    V=0\n",
+    "    k=0\n",
+    "    aux1=0\n",
+    "    aux2=0\n",
+    "    num_binario= bin(r)[2:]\n",
+    "    for i in num_binario:\n",
+    "        if i=='0':\n",
+    "            aux1=(2*U_0*U_1-P*U_0**2)%n\n",
+    "            aux2=(U_1**2-Q*U_0**2)%n\n",
+    "            U_0=aux1\n",
+    "            U_1=aux2\n",
+    "\n",
+    "        if i=='1':\n",
+    "            aux1=(U_1**2-Q*U_0**2)%n\n",
+    "            aux2=(P*U_1**2-2*Q*U_0*U_1)%n\n",
+    "            U_0=aux1\n",
+    "            U_1=aux2\n",
+    "            \n",
+    "    V=(2*U_1-P*U_0)%n\n",
+    "    return U_0,U_1,V\n",
+    "\n",
+    "\n",
+    "def comprueba_condicionesLucas(sucesion):\n",
+    "    condicion=False\n",
+    "    for cont,i in enumerate(sucesion,start=1):\n",
+    "        if cont==1 and i==0: # solo el primero es congruente a 0\n",
+    "            condicion=True\n",
+    "        else: \n",
+    "            if i==0:\n",
+    "                condicion=False\n",
+    "    \n",
+    "    return condicion\n",
+    "\n",
+    "\n",
+    "def certificado_sLucas(P,n,factores_primos):\n",
+    "    sucesion_U=[]\n",
+    "    Q=1\n",
+    "    r=n+1\n",
+    "    while comprueba_condicionesLucas(sucesion_U)==False:\n",
+    "        Q+=1\n",
+    "        sucesion_U=[]\n",
+    "        for i in factores_primos:\n",
+    "            un,a,v=sLucas_modificado(P,Q,r//i,n)\n",
+    "            sucesion_U.append(un)\n",
+    "            \n",
+    "    return P,Q,sucesion_U\n",
+    "\n",
+    "factores.insert(0,1 ) # añadimos un uno al principio\n",
+    "P=1\n",
+    "P,Q,sucesion=certificado_sLucas(P,n,factores)\n",
+    "print(\"P: \",P,\"Q:\",Q)\n",
+    "cont=0\n",
+    "for i in factores: \n",
+    "    print(\"U_(n+1)/\",i,\"=\",sucesion[cont])\n",
+    "    cont+=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para $P=1$ y $Q=2$ el número $n$ tiene rango de lucas $n+1$."
    ]
   }
  ],
@@ -566,7 +678,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "sage",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.9"
