--- a/Ejercicio-8-Blanca-Cano.ipynb
+++ b/Ejercicio-8-Blanca-Cano.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "True"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "2^2 * 19 * 47128831 * 688429143145855402034758463849"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -478,17 +478,18 @@
       "los factores de 26488 son 2^3 * 7 * 11 * 43\n",
       "los factores de 3018226 son 2 * 19 * 79427\n",
       "los factores de 79426 son 2 * 151 * 263\n",
-      "29 es un testigo de la primalidad del factor =47128831\n",
-      "5 es un testigo de la primalidad del factor =224423\n",
-      "3 es un testigo de la primalidad del factor =688429143145855402034758463849\n",
-      "2 es un testigo de la primalidad del factor =2840077\n",
-      "3 es un testigo de la primalidad del factor =26297\n",
-      "2 es un testigo de la primalidad del factor =265395451\n",
-      "2 es un testigo de la primalidad del factor =47819\n",
-      "2 es un testigo de la primalidad del factor =23909\n",
-      "5 es un testigo de la primalidad del factor =959397780037\n",
+      "2 es un testigo de la primalidad del factor =79427\n",
+      "2 es un testigo de la primalidad del factor =3018227\n",
       "3 es un testigo de la primalidad del factor =26489\n",
-      "2 es un testigo de la primalidad del factor =3018227\n"
+      "5 es un testigo de la primalidad del factor =959397780037\n",
+      "2 es un testigo de la primalidad del factor =23909\n",
+      "2 es un testigo de la primalidad del factor =47819\n",
+      "2 es un testigo de la primalidad del factor =265395451\n",
+      "3 es un testigo de la primalidad del factor =26297\n",
+      "2 es un testigo de la primalidad del factor =2840077\n",
+      "3 es un testigo de la primalidad del factor =688429143145855402034758463849\n",
+      "5 es un testigo de la primalidad del factor =224423\n",
+      "29 es un testigo de la primalidad del factor =47128831\n"
      ]
     }
    ],
@@ -514,7 +515,7 @@
     "    print(f\"los factores de {p-1} son {factores_aux[p]}\")\n",
     "    factores_aux[p] = list(map(lambda x:x[0], factores_aux[p]))\n",
     "# vamos a buscar testigos\n",
-    "for f in factores_que_mostrar[:-1:]:\n",
+    "for f in factores_que_mostrar[::-1]:\n",
     "    testigo = BuscaTestigo(f, factores_aux[f], [2,3,5,7,11,13,15, 17,19, 23, 29, 31])\n",
     "    mensaje = (\n",
     "        f\"{testigo} es un testigo de la primalidad del factor ={f}\",\n",
@@ -532,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +542,7 @@
        "[2, 19, 47128831, 688429143145855402034758463849]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -585,11 +586,11 @@
      "output_type": "stream",
      "text": [
       "P:  1 Q: 2\n",
-      "U_(n+1)/ 1 = 0\n",
-      "U_(n+1)/ 2 = 1445563546333125415472685040396674986922\n",
-      "U_(n+1)/ 19 = 2337396916435230302473885871946517997327\n",
-      "U_(n+1)/ 47128831 = 1324746672392258078649063563730902924192\n",
-      "U_(n+1)/ 688429143145855402034758463849 = 2195440474544974924555082376726942700047\n"
+      "U_(n+1)/1, = 0\n",
+      "U_(n+1)/2, = 1445563546333125415472685040396674986922\n",
+      "U_(n+1)/19, = 2337396916435230302473885871946517997327\n",
+      "U_(n+1)/47128831, = 1324746672392258078649063563730902924192\n",
+      "U_(n+1)/688429143145855402034758463849, = 2195440474544974924555082376726942700047\n"
      ]
     }
    ],
@@ -650,7 +651,7 @@
     "print(\"P: \",P,\"Q:\",Q)\n",
     "cont=0\n",
     "for i in factores: \n",
-    "    print(\"U_(n+1)/\",i,\"=\",sucesion[cont])\n",
+    "    print(f\"U_(n+1)/{i}, =\",sucesion[cont])\n",
     "    cont+=1"
    ]
   },
@@ -678,7 +679,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "sage",
+   "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.9"
