--- a/Ejercicio-8-Blanca-Cano.ipynb
+++ b/Ejercicio-8-Blanca-Cano.ipynb
@@ -18,23 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n = 2465809416452482897062922270410493919443\n",
-    "is_prime(n)"
+    "n = 2465809416452482897062922270410493919443"
    ]
   },
   {
@@ -305,26 +293,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2^2 * 19 * 47128831 * 688429143145855402034758463849"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "factor(n+1)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -333,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,17 +392,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 es un testigo de la primalidad de n=2465809416452482897062922270410493919443\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Código auxiliar prácticas anteriores\n",
     "def BuscaTestigo(n, factores, lista):\n",
@@ -448,18 +408,12 @@
     "                    break\n",
     "            if condicion_testigo == True:\n",
     "                return i\n",
-    "    return 0\n",
-    "testigo = BuscaTestigo(n, factores, [2,3,5,7,11,13,15])\n",
-    "mensaje = (\n",
-    "    f\"{testigo} es un testigo de la primalidad de n={n}\",\n",
-    "    f\"No se ha encontrado un testigo que demuestre la primalidad de n= {n}\"\n",
-    ")[testigo == 0] \n",
-    "print(mensaje)"
+    "    return 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +496,7 @@
        "[2, 19, 47128831, 688429143145855402034758463849]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,6 +510,28 @@
    "metadata": {},
    "source": [
     "son primos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 es un testigo de la primalidad de n=2465809416452482897062922270410493919443\n"
+     ]
+    }
+   ],
+   "source": [
+    "testigo = BuscaTestigo(n, factores, [2,3,5,7,11,13,15])\n",
+    "mensaje = (\n",
+    "    f\"{testigo} es un testigo de la primalidad de n={n}\",\n",
+    "    f\"No se ha encontrado un testigo que demuestre la primalidad de n= {n}\"\n",
+    ")[testigo == 0] \n",
+    "print(mensaje)"
    ]
   },
   {
@@ -670,7 +646,7 @@
   "kernelspec": {
    "display_name": "SageMath 9.5",
    "language": "sage",
-   "name": "SageMath-9.5"
+   "name": "sagemath-9.5"
   },
   "language_info": {
    "codemirror_mode": {
@@ -683,8 +659,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
