Finaliza ejercicio 10 a falta de revisión

--- a/Ejercicio-10-Blanca-Cano.ipynb
+++ b/Ejercicio-10-Blanca-Cano.ipynb
@@ -17,11 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = 75577753"
+    "p = 75577753\n",
+    "a = -11"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +44,7 @@
        "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -93,23 +94,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (111447176.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/6x/92l244517zjbjbndy62lk_9m0000gn/T/ipykernel_782/111447176.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    s = p - Integer(1)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las soluciones son \n",
+      "14742789 60834964\n"
      ]
     }
    ],
    "source": [
     "def Tonelli_Shanks(a, p):\n",
-    "  '''Calcula entero cuadrático, algoritmo en base al pseudo códifo wikipedia \n",
-    "  ''' \n",
-    "    s = p - 1\n",
+    "    '''Calcula entero cuadrático, algoritmo en base al pseudo códifo wikipedia \n",
+    "    ''' \n",
+    "    s = p-1\n",
     "    e = 0\n",
     "    while s % 2 == 0:\n",
     "        s //= 2\n",
@@ -144,11 +145,11 @@
     "\n",
     "#Ejemplo de prueba \n",
     "\n",
-    "sol1 = Tonelli_Shanks(n, p)\n",
-    "sol2 = p-sol1\n",
+    "n = int(Tonelli_Shanks(a, p))\n",
+    "sol2 = p-n\n",
     "\n",
     "print(\"Las soluciones son \")\n",
-    "print(sol1,sol2)"
+    "print(n,sol2)"
    ]
   },
   {
@@ -188,14 +189,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Algoritmo de euclides: \n",
+      "151155506 = 10 * 14742789 + 3727616\n",
+      "14742789 = 3 * 3727616 + 3559941\n",
+      "3727616 = 1 * 3559941 + 167675\n",
+      "3559941 = 21 * 167675 + 38766\n",
+      "167675 = 4 * 38766 + 12611\n",
+      "\n",
+      "La factorización de p=75577753 es (12611 + 3609sqrt(-11)/2) (12611 - 3609sqrt(-11)/2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Algoritmo de Euclides \n",
+    "def AlgoritmoEuclides(num1,num2, parada):\n",
+    "    if num1<num2:\n",
+    "        num1,num2=num2,num1\n",
+    "    resto=num1%num2\n",
+    "    print(f\"{num1} = {num1//num2} * {num2} + {resto}\")\n",
+    "    if resto < parada :\n",
+    "        return resto\n",
+    "    return AlgoritmoEuclides(num2,resto,parada)\n",
+    "\n",
+    "def Factorizacion(p,n, m): \n",
+    "    print(\"Algoritmo de euclides: \")\n",
+    "    a = AlgoritmoEuclides(2*p,n, 2*sqrt(p))\n",
+    "    b = sqrt((4*p-a**2)/11)\n",
+    "\n",
+    "    print(f\"\\nLa factorización de p={p} es ({a} + {b}sqrt({m})/{2}) ({a} - {b}sqrt({m})/{2})\")\n",
+    "\n",
+    "Factorizacion(p,  n, a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Apartado 4  \n",
+    "¿Son principales tus ideales $(p, n+ \\sqrt{-11})$ y $(p, n+\\sqrt{-11})$?\n",
+    "\n",
+    "Sí, ya que $Q[\\sqrt{-11}]$ es un dominio de ideales principales "
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "24dcaf82da949eb8a169ffe40fd331a23a642ab22de3e08713f616aa663d0868"
+   "hash": "adb5cd174cd885aafe13f9c79d1ba14d4a172d301e49486c29efffe4dc4c2562"
   },
   "kernelspec": {
    "display_name": "SageMath 9.5",
