Ligera modificación ejercicio 10

--- a/Ejercicio-10-Blanca-Cano.ipynb
+++ b/Ejercicio-10-Blanca-Cano.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,8 @@
       "3559941 = 21 * 167675 + 38766\n",
       "167675 = 4 * 38766 + 12611\n",
       "\n",
-      "La factorización de p=75577753 es (12611 + 3609sqrt(-11)/2) (12611 - 3609sqrt(-11)/2)\n"
+      "La factorización de p=75577753 es (12611 + 3609sqrt(-11)/2) (12611 - 3609sqrt(-11)/2)\n",
+      "Es decir los generadores de los ideales (p, n +- sqrt(m))\n"
      ]
     }
    ],
@@ -225,6 +226,7 @@
     "    b = sqrt((4*p-a**2)/11)\n",
     "\n",
     "    print(f\"\\nLa factorización de p={p} es ({a} + {b}sqrt({m})/{2}) ({a} - {b}sqrt({m})/{2})\")\n",
+    "    print(\"Es decir los generadores de los ideales (p, n +- sqrt(m))\")\n",
     "\n",
     "Factorizacion(p,  n, a)"
    ]
