--- a/Ejercicio-9-Blanca-Cano.ipynb
+++ b/Ejercicio-9-Blanca-Cano.ipynb
@@ -323,6 +323,30 @@
    "source": [
     "Luego para nuestro polinomio uno será de grado 9 y el otro de 17"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Vector space of degree 26 and dimension 2 over Finite Field of size 2\n",
+       "Basis matrix:\n",
+       "[1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+       "[0 1 0 1 0 1 1 0 1 1 0 0 0 0 1 0 0 0 1 1 1 0 1 0 1 0]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = B -identity_matrix(f.degree())\n",
+    "kernel(A)"
+   ]
   }
  ],
  "metadata": {
