--- a/Ejercicio-9-Blanca-Cano.ipynb
+++ b/Ejercicio-9-Blanca-Cano.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercio 9 \n",
+    "# Ejercicio 9 \n",
     "\n",
     "Autora: Blanca Cano Camarero \n"
    ]
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "1"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,8 +248,6 @@
     "def BerlekampCriterio(B, f):\n",
     "    # A = (B-Id)\n",
     "    A = B -identity_matrix(f.degree())\n",
-    "    print(A)\n",
-    "\n",
     "    #veamos cuantas sol tiene \n",
     "    rango = rank(A)\n",
     "    r = f.degree() - rango\n",
@@ -265,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -338,14 +336,233 @@
        "[0 1 0 1 0 1 1 0 1 1 0 0 0 0 1 0 0 0 1 1 1 0 1 0 1 0]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "A = B -identity_matrix(f.degree())\n",
-    "kernel(A)"
+    "subespacios = kernel(A)\n",
+    "subespacios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0), (1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0), (0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0), (1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subespacios = list(subespacios)\n",
+    "print(subespacios)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apartado tercero \n",
+    "\n",
+    "Aplica Berlekamp si es necesario recursivamente para halla la descomposición en irreducibles de $g(x)$ en $Z_2[x]$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El polinomio f-reductor es h(x) = x^24 + x^22 + x^20 + x^19 + x^18 + x^14 + x^9 + x^8 + x^6 + x^5 + x^3 + x\n",
+      "f_1 = x^9 + x^8 + x^4 + x^3 + x^2 + x + 1\n",
+      "mcd(f_1, (f_1)') = 1\n",
+      "f_2 = x^17 + x^16 + x^15 + x^12 + x^11 + x^9 + x^6 + x^5 + x^4 + x^3 + 1\n",
+      "mcd(f_2, (f_2)') = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "indice_h_reductor = 2\n",
+    "# Guardamos y le damos la vuelta\n",
+    "candidato = subespacios[indice_h_reductor][::-1]\n",
+    "R = PolynomialRing(GF(2), 'x')\n",
+    "x = R.gen()\n",
+    "def PolinomioAPartirMatriz(lista):\n",
+    "    '''Transforma una lista en un coeficiente \n",
+    "    La matriz es el coeficiente de orden \n",
+    "    [c,b,a...]\n",
+    "    a + bx + cx^2 ...\n",
+    "    '''\n",
+    "    polinomio = lista[0]\n",
+    "    for coeficiente in lista[1:]:\n",
+    "        polinomio  = x*polinomio + coeficiente \n",
+    "    return polinomio \n",
+    "\n",
+    "h = PolinomioAPartirMatriz(candidato)\n",
+    "print(f\"El polinomio f-reductor es h(x) = {h}\")\n",
+    "# Vamos a calcular los respectivos polinomios irreducibles\n",
+    "f_1 = gcd(f, h)\n",
+    "print(f\"f_1 = {f_1}\")\n",
+    "print(f\"mcd(f_1, (f_1)') = {gcd(f_1, derivative(f_1, x))}\")\n",
+    "f_2 = gcd(f, h+1)\n",
+    "print(f\"f_2 = {f_2}\")\n",
+    "print(f\"mcd(f_2, (f_2)') = {gcd(f_2, derivative(f_2, x))}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como podemos ver $f_1, f_2$ son libres de cuadrados y el algoritmo nos asegura que  sean irreducibles. \n",
+    "\n",
+    "Deduciendo por tanto que \n",
+    "$$g(x) = f_1(x)f_2(x)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apartado cuarto \n",
+    "\n",
+    "Haz lo mismo para hallar la descomposición en irreducibles de $f(x) \\mod 3.$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f(x)= x^26 + x^23 + x^16 + x^13 + x^12 + x^11 + x^5 + x^4 + x^2 + x + 1\n",
+      "Como modemos comprobar por mcd(f, f') = 1 es libre de cuadrados\n",
+      "El cuerpo es F_3^26\n",
+      "La matrix de Berlekamp es \n",
+      "[1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
+      "[2 2 2 0 2 2 0 0 0 0 0 2 2 2 0 0 2 0 0 0 0 0 0 2 0 0]\n",
+      "[0 0 2 2 2 0 2 2 0 0 0 0 0 2 2 2 0 0 2 0 0 0 0 0 0 2]\n",
+      "[0 1 1 1 2 0 0 0 2 2 0 0 1 1 1 2 2 0 0 0 2 0 0 0 1 0]\n",
+      "[2 2 2 1 0 0 2 0 0 0 2 1 2 2 1 1 0 2 2 0 0 0 2 2 0 0]\n",
+      "[0 0 2 2 2 1 0 0 2 0 0 0 2 1 2 2 1 1 0 2 2 0 0 0 2 2]\n",
+      "[1 2 2 1 0 1 0 1 0 0 2 1 2 2 0 1 0 0 1 1 0 2 2 1 1 0]\n",
+      "[2 2 0 2 1 0 0 1 0 1 0 2 1 0 2 2 2 1 0 0 1 1 0 1 2 1]\n",
+      "[1 0 2 1 1 2 0 0 0 1 0 2 0 2 0 0 0 1 2 1 0 0 1 2 2 1]\n",
+      "[1 0 1 2 0 1 0 2 0 0 0 2 0 2 2 2 1 2 0 1 2 1 0 1 0 2]\n",
+      "[0 1 2 1 1 0 1 1 0 2 0 0 1 0 1 2 2 0 1 2 0 1 2 1 1 1]\n",
+      "[2 1 1 0 1 2 0 0 1 1 0 1 1 1 0 0 0 1 2 0 1 2 0 0 1 1]\n",
+      "[2 1 0 0 0 1 0 2 0 0 1 0 1 2 0 1 2 2 0 1 2 0 1 1 2 0]\n",
+      "[1 1 0 1 1 1 0 1 0 2 0 1 2 1 1 2 1 1 2 2 0 1 2 1 1 1]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 2 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 2 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 2 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 2 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 2 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 2 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 2 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 2 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 2 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 1 0 0 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
+      "[2 2 2 0 2 2 0 0 0 0 0 2 2 1 0 0 2 0 0 0 0 0 0 2 0 0]\n",
+      "[0 0 2 2 2 0 2 2 0 0 0 0 0 2 1 2 0 0 2 0 0 0 0 0 0 2]\n",
+      "[0 1 1 1 2 0 0 0 2 2 0 0 1 1 1 1 2 0 0 0 2 0 0 0 1 0]\n",
+      "[2 2 2 1 0 0 2 0 0 0 2 1 2 2 1 1 2 2 2 0 0 0 2 2 0 0]\n",
+      "[0 0 2 2 2 1 0 0 2 0 0 0 2 1 2 2 1 0 0 2 2 0 0 0 2 2]\n",
+      "[1 2 2 1 0 1 0 1 0 0 2 1 2 2 0 1 0 0 0 1 0 2 2 1 1 0]\n",
+      "[2 2 0 2 1 0 0 1 0 1 0 2 1 0 2 2 2 1 0 2 1 1 0 1 2 1]\n",
+      "[1 0 2 1 1 2 0 0 0 1 0 2 0 2 0 0 0 1 2 1 2 0 1 2 2 1]\n",
+      "[1 0 1 2 0 1 0 2 0 0 0 2 0 2 2 2 1 2 0 1 2 0 0 1 0 2]\n",
+      "[0 1 2 1 1 0 1 1 0 2 0 0 1 0 1 2 2 0 1 2 0 1 1 1 1 1]\n",
+      "[2 1 1 0 1 2 0 0 1 1 0 1 1 1 0 0 0 1 2 0 1 2 0 2 1 1]\n",
+      "[2 1 0 0 0 1 0 2 0 0 1 0 1 2 0 1 2 2 0 1 2 0 1 1 1 0]\n",
+      "[1 1 0 1 1 1 0 1 0 2 0 1 2 1 1 2 1 1 2 2 0 1 2 1 1 0]\n",
+      "f(x) es irreducible en Z_3 pues el rango del sistema lineal es 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 75577399\n",
+    "\n",
+    "R = PolynomialRing(GF(3), 'x')\n",
+    "x = R.gen()\n",
+    "coeficientes = list(map(int, bin(n)[2:]))\n",
+    "f = 0\n",
+    "for coeficiente in coeficientes[:-1]:\n",
+    "        f = x*(coeficiente + f)\n",
+    "\n",
+    "f = f+coeficientes[-1]\n",
+    "print(f\"f(x)= {f}\")\n",
+    "\n",
+    "# Veamos si es libre de cuadrados \n",
+    "f.gcd(derivative(f,x))\n",
+    "print(f\"Como modemos comprobar por mcd(f, f') = {f.gcd(derivative(f,x))} es libre de cuadrados\")\n",
+    "\n",
+    "p=3\n",
+    "k = PotenciaCuerpoFinito(f,p)  \n",
+    "print(f\"El cuerpo es F_{p}^{k}\")\n",
+    "\n",
+    "# Calculamos la matrix de Berlekamp\n",
+    "B = BerlekampMatrix(f)\n",
+    "print(\"La matrix de Berlekamp es \")\n",
+    "print(B)\n",
+    "\n",
+    "\n",
+    "r = BerlekampCriterio(B,f)\n",
+    "if r==1:\n",
+    "    print(\"f(x) es irreducible en Z_3 pues el rango del sistema lineal es 1\" )\n",
+    "else:\n",
+    "    print(\"f(x) no es irreducible\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apartado quinto \n",
+    "\n",
+    "¿Qué se deduce sobre la reducibilidad de $f(x)$ en $Z[x]$?\n",
+    "\n",
+    "A la vista de los resultado obtenidos en los apartados anteriores está claro que $f$  irreducible en $Z[x]$.\n",
+    "\n",
+    "No solo por heber sido irreducible en $Z_3$ si no porque las factorizaciones de los apartados anteriores son incompatibles."
    ]
   }
  ],
@@ -356,7 +573,7 @@
   "kernelspec": {
    "display_name": "SageMath 9.5",
    "language": "sage",
-   "name": "SageMath-9.5"
+   "name": "sagemath-9.5"
   },
   "language_info": {
    "codemirror_mode": {
@@ -369,8 +586,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
