Subo la práctica acabada

--- a/RSA-Blanca-Cano-Camarero.ipynb
+++ b/RSA-Blanca-Cano-Camarero.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,125 @@
    "metadata": {},
    "source": [
     "## Apartado tercero \n",
-    "Intentar factorizar $n$ mediante el método $p-1$ de Pollard. PAra ello llega como máximo a $b=8$."
+    "Intentar factorizar $n$ mediante el método $p-1$ de Pollard. Para ello llega como máximo a $b=8$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se ha encontrado para b=11 con a=43700024\n",
+      "Con este método hemos visto que p_encontrada es 7393, donde si recordamos p=7559, q = 7393\n",
+      "Por lo que hemos encontrado una factorización.\n"
+     ]
+    }
+   ],
+   "source": [
+    "candidatos_b = list(range(2,13))\n",
+    "primo = 2\n",
+    "def Pollard(n):\n",
+    "    for b in candidatos_b:\n",
+    "        a = power_mod(primo, factorial(b), n)\n",
+    "        if (gcd(a-1, n) != 1): \n",
+    "            print(f\"Se ha encontrado para b={b} con a={a}\")\n",
+    "            return a \n",
+    "    return 1 # en caso de que no de no entontrarse\n",
+    "\n",
+    "a= Pollard(n)\n",
+    "# entonces la p encontrada es\n",
+    "p_encontrada = gcd(n,a-1)\n",
+    "print(f\"Con este método hemos visto que p_encontrada es {p_encontrada}, donde si recordamos p={p}, q = {q}\")\n",
+    "print(f\"Por lo que hemos encontrado una factorización.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apartado 4\n",
+    "\n",
+    "Intenta factorizar $n$ a partir de $\\phi(n)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La soluciones son p = 7393, q = 7559\n"
+     ]
+    }
+   ],
+   "source": [
+    "phi_euler = (p-1)*(q-1) # suponemos que p y q no son conocidos\n",
+    "\n",
+    "b = (n+1-phi_euler)//2\n",
+    "raiz = sqrt(b**2 -n)\n",
+    "print(f\"La soluciones son p = {b-raiz}, q = {b+raiz}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apartado 5\n",
+    "Intenta factorizar $n$ a partir de $e$ y $d$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se ha encontrado para a=5 k=41901552\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7559"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = e.inverse_mod((p-1)*(q-1)) # suponemos no cocidos p y q\n",
+    "\n",
+    "k = e*d -1\n",
+    "\n",
+    "cantidad_a_probar = 40\n",
+    "def Factoriza(k, n):\n",
+    "    while k > 1:  \n",
+    "        for i in range(cantidad_a_probar):\n",
+    "            #a = randint(2,n)\n",
+    "            for a in [2,3,5,7,11,13,17,19]:\n",
+    "                if gcd(a,n) != 1:\n",
+    "                    print(f\"Se ha encontrado el factor p={a}\")\n",
+    "                    return a # Se ha encontrado un valor\n",
+    "                modulo  = power_mod(a, k, n)\n",
+    "                if modulo != 1:\n",
+    "                    print(f\"Se ha encontrado para a={a} k={k}\")\n",
+    "                    return gcd(n,  mod(a**k -1, n))\n",
+    "            k = k//2\n",
+    "    return 1\n",
+    "\n",
+    "Factoriza(k,n)\n"
    ]
   }
  ],
