--- a/RSA-Blanca-Cano-Camarero.ipynb
+++ b/RSA-Blanca-Cano-Camarero.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,25 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se ha encontrado para a=5 k=41901552\n"
+      "Se ha encontrado para a=5 k=41901552\n",
+      " Uno de los factores encontrados es 7559\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "7559"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -229,7 +220,8 @@
     "            k = k//2\n",
     "    return 1\n",
     "\n",
-    "Factoriza(k,n)\n"
+    "p = Factoriza(k,n)\n",
+    "print(f\" Uno de los factores encontrados es {p}\")\n"
    ]
   }
  ],
@@ -237,7 +229,7 @@
   "kernelspec": {
    "display_name": "SageMath 9.5",
    "language": "sage",
-   "name": "SageMath-9.5"
+   "name": "sagemath-9.5"
   },
   "language_info": {
    "codemirror_mode": {
@@ -250,8 +242,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
