Fin de las prácticas de criptografía 🥳

--- a/Logaritmo-discreto-Blanca-Cano.ipynb
+++ b/Logaritmo-discreto-Blanca-Cano.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicios de evaluación de logaritmo discreto\n",
+    "# Ejercicios de evaluación de logaritmo discreto\n",
     "\n",
-    "Ejercicio. Los parámetros de un criptosistema de ElGamal son $p = 211$ y $g = 3$, es decir, el criptosistema está diseñado en el cuerpo $F_{211}$ = $Z_{211}$ y tomamos como generador de $F^∗_{211}$, $g = 3$. La clave pública empleada es $3^a = 109 \\mod 211$. Descifra el criptograma $(154, d \\mod 211)$. Para calcular los logaritmos discretos necesarios emplea dos de los métodos descritos en la teoría.\n"
+    "Ejercicio. Los parámetros de un criptosistema de ElGamal son $p = 211$ y $g = 3$, es decir, el criptosistema está diseñado en el cuerpo $F_{211}$ = $Z_{211}$ y tomamos como generador de $F^∗_{211}$, $g = 3$. La clave pública empleada es $3^a = 109 \\mod 211$. Descifra el criptograma $(154, d \\mod 211)$. Para calcular los logaritmos discretos necesarios emplea dos de los métodos descritos en la teoría.\n"
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,15 +87,42 @@
     "    #no existe logaritmo discreto\n",
     "    return 0\n",
     "\n",
-    "def SilverPohlingHellman(h,b,n):\n",
-    "    \"\"\" En este caso el orden es primo \n",
-    "    \"\"\"\n",
+    "def SacaJ(e,r,p):\n",
+    "    for j in range(p):\n",
+    "        if e == r[j]:\n",
+    "            return j\n",
+    "    return 1\n",
+    "\n",
+    "def SilverPoligHellman(b, n, h):\n",
+    "    l = list(factor(n))\n",
+    "    r = len(l)\n",
+    "    r_list = []\n",
+    "    m = []\n",
+    "    p_super_e = []\n",
+    "    for i in range(r): # recorremos cada productorio \n",
+    "        r_list.append([])\n",
+    "        (p,e) = l[i]\n",
+    "        p_super_e.append(p**e)\n",
+    "        p_aux = p\n",
+    "        acc = 0\n",
+    "        for j in range(e):\n",
+    "            r_ij = b^(j*n/p) %n\n",
+    "            r_list[i].append(r_ij)\n",
+    "        \n",
+    "        for k in range(e):\n",
+    "            y_k = h/(b^acc)\n",
+    "            x_k = SacaJ(y_k^(n/p_aux), r_list[i], e)\n",
+    "            acc += x_k*p^k\n",
+    "            p_aux*=p\n",
+    "        m.append(acc)\n",
+    "    return crt(m, p_super_e)\n",
+    "     \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,22 +130,24 @@
      "output_type": "stream",
      "text": [
       "Logaritmo discreto de Shanks:  96\n",
-      "Logaritmo discreto de sage: 96\n"
+      "Logaritmo discreto de sage: 96\n",
+      "Logaritmo discreto de Silver Polig Hellman:  96\n"
      ]
     }
    ],
    "source": [
-    "p # es el orden \n",
     "b = 3\n",
     "h = mod(109,p)\n",
+    "n = p-1\n",
     "\n",
     "print(\"Logaritmo discreto de Shanks: \", Shanks(h,b,p))\n",
-    "print(f\"Logaritmo discreto de sage: {discrete_log(h,b,p-1)}\") # Comparamos nuestro resultado con el de Sage \n"
+    "print(f\"Logaritmo discreto de sage: {discrete_log(h,b,n)}\") # Comparamos nuestro resultado con el de Sage \n",
+    "#print(\"Logaritmo discreto de Silver Polig Hellman: \", SilverPoligHellman(b, n, h))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,34 +164,13 @@
     "mensaje = k * pow(m , p-1-a)\n",
     "print(\"El mensaje descifrado es: \", m)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(2, 1), (7, 1)]"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l =list(factor(14))\n",
-    "l"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "SageMath 9.5",
    "language": "sage",
-   "name": "SageMath-9.5"
+   "name": "sagemath-9.5"
   },
   "language_info": {
    "codemirror_mode": {
@@ -176,7 +184,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.9"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "adb5cd174cd885aafe13f9c79d1ba14d4a172d301e49486c29efffe4dc4c2562"
